--- a/tex/main.tex
+++ b/tex/main.tex
@@ -30,18 +30,33 @@
 \end{center}
 
   {\bf \sffamily \fontsize{10}{12}\selectfont \noindent   
-Influenza viruses constantly evolve~\cite{dos2016influenza}, typically producing small sequence alterations over a time scale of months  that sufficiently perturb surface protein structures to evade host immunity, and cause the  recurring seasonal flu epidemic. Such antigenic drifts necessitate yearly innoculation of the population with a  reformulated  vaccine,  targeting the predicted dominant  strain of the upcoming flu season.  Failing to predict the dominant strain  dramatically reduces  vaccine effectiveness~\cite{tricco2013comparing}, and despite a serious  impact on global health from the seasonal infection spikes, prediction of the dominant strain remains imperfect. Furthermore, novel strains emerging into humans from animal reservoirs, often aided by  recombination of genes from past human  strains, pose the even graver threat of a  pandemic. Despite global biosurveillance efforts to  collect wild specimens from diverse hosts and geo-locations, our current ability to objectively, reliably and scalably  evaluate the risk posed to  humans by  individual strains  is limited. In this study, we introduce a new machine learning algorithm to automatically parse out emergent evolutionary constraints operating on viral sequences in the wild, allowing us to predict the likelihood of specific future  mutations, and  yielding the  numerical likelihood of specific  strains emerging through natural evolutionary processes. We show that our approach yields forecasts that outperform WHO recommended flu vaccine compositions almost consistently over the past two decades, for both H1N1 and H3N2 subtypes, individually in the northern and the southern hemispheres. Additionally, we replicate Center for Disease Control's (CDC) Influence Risk Assessment (IRAT) score for the pandemic potential of  \infl  viruses isolated from animal hosts. While the IRAT evaluation for individual strains involves multiple experimental assays that typically take weeks to perform, our approach produces a highly correlated risk assessment in seconds. This dramatic reduction in time and cost potentially allows us to fully exploit current biosurvellinace capacity, scalably analyzing risk from  the tens of thousands of strains collected every year, and hence potentially laying the foundation for  meaningful preemptive pandemic mitigation strategies. 
+Influenza viruses constantly evolve~\cite{dos2016influenza}, typically producing small sequence alterations over a time scale of months  that sufficiently perturb surface protein structures to successfully evade  host immunity, and cause the  recurring seasonal flu epidemic. Such antigenic drifts necessitate yearly innoculation of the population with a  reformulated  vaccine,  targeting the predicted dominant  strain of the upcoming flu season.  Failing to predict the dominant strain with sufficient accuracy  dramatically reduces  vaccine effectiveness~\cite{tricco2013comparing}, and despite posing a serious threat to global health, prediction of the dominant strain(s)  circulating during the  seasonal infection spikes remains imperfect. Furthermore, novel strains emerging into humans from animal reservoirs, often aided by  recombination of genes from past human  strains, pose the even graver threat of a  pandemic. Despite global biosurveillance efforts to  collect wild specimens from diverse hosts and geo-locations, our current ability to objectively, reliably and scalably  evaluate the risk posed to  humans by  individual strains  is limited. In this study, we introduce a new machine learning algorithm to automatically parse out emergent evolutionary constraints operating on viral sequences in the wild, allowing us to predict the likelihood of specific future  mutations, and  estimate  the  numerical likelihood of specific  strains emerging through natural evolutionary processes. We show that our approach yields forecasts that outperform WHO recommended flu vaccine compositions almost consistently over the past two decades, for both H1N1 and H3N2 subtypes, individually in the northern and the southern hemispheres. Additionally, we replicate Center for Disease Control's (CDC) assessment of the pandemic potential of  \infl  viruses isolated from animal hosts, which do not yet circulate in the human population. While CDC uses the Influence Risk Assessment  Tool (IRAT) to score   each strain via  multiple experimental assays that typically take weeks to perform, our approach is demonstrated to produce an assessment in seconds that is highly correlated to the IRAT score. This dramatic reduction in time and cost  enables us to fully exploit current biosurvellinace capacity, scalably analyzing risk from  the tens of thousands of strains collected every year,  potentially laying the foundation for  meaningful preemptive pandemic mitigation strategies. 
 }
 
 \vspace{10pt}
 
 \section*{Introduction}
-In the aftermath of the COVID-19 pandemic that caused one of the most devastating disasters of the past century, a looming question is whether we can prepare for, preempt and mitigate such events in the future. Evolving viruses, whether currently circulating in the human population, or in animal reservoirs that might spillover and attain human-to-human transmission capability, pose an ever-present epidemic risk.  Current surveillance paradigms, while crucial for mapping disease ecosystems, are limited in their ability to address this challenge. Habitat encroachment, climate change, and other ecological factors~\cite{rulli2017nexus,chua2002anthropogenic,childs2004zoonotic} unquestionably drive up the odds of zoonotic spill-overs. Nevertheless, current efforts at tracking these effects have not improved our ability to quantify future risk of emergence~\cite{fair2019viral}. Tracking viral diversity in animal hosts, while important, often does not transparently map to emergence risk.  This is particularly true for \infl, which partly on account of its segmented genome, can easily incorporate genes from multiple strains and emerge as novel human pathogens, and thus harbor a high pandemic potential. While large antigenic shifts in \infl are relatively rare, even the smaller seasonal sequence alterations in cause sufficient variation in the surface proteins to evade existing immunity, and require yearly reformulation of the flu vaccine.
+In the aftermath of the COVID-19 pandemic that caused one of the most devastating disasters of the past century, a looming question is whether we can prepare for, preempt and mitigate such events in the future. Evolving viruses, whether currently circulating in the human population, or in animal reservoirs that might spillover and achieve human-to-human (HH)  transmission capability, pose an ever-present epidemic risk. This is particularly true for \infl, which partly on account of its segmented genome and wide prevalence in multiple animal hosts, can easily incorporate genes from multiple strains and emerge as novel human pathogens, and thus harbor a high pandemic potential [REF]. Current surveillance paradigms, while crucial for mapping disease ecosystems, are limited in their ability to address this challenge. Habitat encroachment, climate change, and other ecological factors~\cite{rulli2017nexus,chua2002anthropogenic,childs2004zoonotic} unquestionably drive up the odds of zoonotic spill-overs. Nevertheless, current efforts at tracking these effects have not improved our ability to quantify future emergence risk~\cite{fair2019viral}. Similarly, tracking viral diversity in animal hosts [REF], while important, often does not transparently map to risk of  emergence, or the potential for a global pandemic.  
 
-However, for the  vaccine to be effective, we need to  predict the dominant circulating strain of the upcoming season with sufficient accuracy.
-Currently, the composition of the flu shot is decided at least six months in advance of the seasonal infection peak, and targets three to four  historical strains as recommended by the CDC/WHO, who identify these specific strains by  sampling the current circulation~\cite{agor2018models}, hoping to match the  dominant strain(s) in the upcoming season. A variety of hard-to-model effects hinder this prediction, which, despite observed cross-reactive effects~\cite{tricco2013comparing}, have had  limited vaccine effectiveness in recent years~\cite{cdceff}. Rank-ordering strains which do not yet circulate in humans according to either their spillover risk or their pandemic potential, has proven to be even more difficult [REF]. CDC's current, somewhat subjective, solution to this problem is the Influenza Risk Assessment Tool (IRAT), which  uses a combination of ten weighted risk elements, including  1) properties of the virus, 2) attributes of the population, and 3) ecology and epidemiological characteristics of the virus~\cite{Influenz24:online} that are expert-selected. Evaluating these factors involve several experimental assay for each strain, taking possibly weeks to return the final IRAT  score for a single strain. Thus, we have a scalability problem: with  the current global biosurveillance efforts  collecting tens of thousands of sequences every year, IRAT assessment is simply not fast enough to  preempt a pandemic. 
+{\color{Red1} should we begin by talking about \infl}
 
-A key barrier to making progress in this direction has been the missing ability to estimate the numerical likelihood of specific mutations in the future, and in general  the likelihood of a wild strain spontaneously giving rise to another by random chance. Currently, this likelihood is qualitatively equated to sequence similarity, which is measured by the number of mutations it takes to change one strain to another. However, the odds of one sequence mutating to another is not just a function of how many mutations separate them, but also of how specific mutations incrementally affect fitness. Ignoring the constraints arising from the need to conserve function makes any assessment of the mutation likelihood open to subjective bias. Here, we show that a precise calculation is possible when sequence similarity is evaluated via a new biologically-aware metric, which we call the \textit{q-distance}.
+In addition to large antigenic shifts in \infl which have historically often given rise to  pandemics [REF], even the smaller seasonal sequence alterations cause sufficient variation in the surface proteins to evade existing immunity, and require yearly re-inoculation of the population with a reformulated flu vaccine.
+
+However, the flu shot for any given season can only work well to prevent serious infection against a small set of strains [REF], and thus, we need to be able to predict the dominant circulating strain(s) of the upcoming season. Currently, the composition of the flu shot is decided at least six months prior to the seasonal infection peak, and targets three to four  historical human strains as recommended by the CDC/WHO, who identify these targets by  sampling the current circulation~\cite{agor2018models}, hoping to match the  dominant strain(s) in the upcoming season. A variety of hard-to-model effects hinder this prediction, which, despite observed cross-reactive effects~\cite{tricco2013comparing}, have had resulted in limited vaccine effectiveness in recent years~\cite{cdceff}.
+
+Recognizing or predicting the spillover risk or the pandemic potential of strains which do not yet circulate in humans is even more difficult, and largely uncharted. CDC's current, somewhat subjective, solution to the problem of rank-ordering such strains  according to either their  pandemic potential is the Influenza Risk Assessment Tool (IRAT), which  uses a combination of ten weighted expert-selected risk elements  pertaining to the  1) properties of the virus, 2) the attributes of the population, and 3) the ecology and epidemiological characteristics of the virus~\cite{Influenz24:online}. Several experimental assays must be carried out for each strain to evaluate  these factors, implying that  for every single strain, estimation of  the final IRAT  score might take weeks. This  results in a scalability bottleneck: with  the current global biosurveillance efforts  collecting tens of thousands of sequences every year (and such capacity is rapidly increasing [REF]), IRAT assessment is simply not fast enough to meaningfully mitigate pandemic risks.
+
+For both these problems, the central barrier to progress is a lack of a theoretical understanding of how to model emergent selection pressures on wild pathogens from observational data, $e.g.$,  from sequence databases. Currently, the likelihood of one strain giving rise to another in the wild, is qualitatively equated to sequence similarity, which is measured by the number of mutations it takes to change one strain to another. However, not all mutations are equally likely, since some might drastically reduce replicative fitness, and thus never actually show up in circulation.
+% A key barrier to making progress in this direction has been the missing ability to estimate the numerical likelihood of specific mutations in the future, and in general  the likelihood of a wild strain spontaneously giving rise to another by random chance. Currently, this likelihood is qualitatively equated to sequence similarity, which is measured by the number of mutations it takes to change one strain to another.
+Thus, the odds of one sequence mutating to another is not just a function of how many mutations they are apart, but also of how specific mutations incrementally affect fitness. Any attempt to predict future mutations or the likelihood of emergence of future strains, must consider the constraints arising from the need to conserve function under complex, hard-to-model, and a priori unknown selection pressures. Modeling such effects is made difficult by the fact that  any proposed approach that requires  knowledge of phenotypic characteristics such as  pathogenicities or HH transmission likelihood of novel strains will require strain-by-strain experimental assays, and thus fail to scale up and address the challenges outlined above.
+
+
+Can we even predict future mutations?
+
+
+Without somehow considering  the constraints arising from the need to conserve function under complex selection pressures, the  assessment of the  likelihood of future strains or specific mutations is 
+
+Here, we show that a precise calculation is possible when sequence similarity is evaluated via a new biologically-aware metric, which we call the \textit{q-distance}.
 
 As an applications of the q-distance, we show that we can improve seasonal forecasts for the future dominant circulating strain by learning from the mutational patterns of key surface proteins: Hemaglutinnin (HA) and Neuraminidase (NA) for Influenza A (selected for their known roles in cellular entry and exit~\cite{gamblin2010influenza}). We outperform the WHO's recommendations for the flu-shot composition consistently over past two decades, measured as the number of mutations that separate the predicted from the dominant circulating strain in each season. Our recommendations repeatedly end up closer to the dominant circulating strain, illustrating the potential of our approach to correctly predict evolutionary trajectories. 
 
