--- a/tex/allbib.bib
+++ b/tex/allbib.bib
@@ -1,3 +1,24 @@
+@article{neher2014predicting,
+  title={Predicting evolution from the shape of genealogical trees},
+  author={Neher, Richard A and Russell, Colin A and Shraiman, Boris I},
+  journal={Elife},
+  volume={3},
+  pages={e03568},
+  year={2014},
+  publisher={eLife Sciences Publications Limited}
+}
+
+@article{huddleston2020integrating,
+  title={Integrating genotypes and phenotypes improves long-term forecasts of seasonal influenza A/H3N2 evolution},
+  author={Huddleston, John and Barnes, John R and Rowe, Thomas and Xu, Xiyan and Kondor, Rebecca and Wentworth, David E and Whittaker, Lynne and Ermetal, Burcu and Daniels, Rodney Stuart and McCauley, John W and others},
+  journal={Elife},
+  volume={9},
+  pages={e60067},
+  year={2020},
+  publisher={eLife Sciences Publications Limited}
+}
+
+
 
 @InProceedings{	  1582183,
   author	= {G. C. Goodwin and J. C. Aguero},
