--- a/tex/main.tex
+++ b/tex/main.tex
@@ -35,13 +35,15 @@ Influenza viruses constantly evolve~\cite{dos2016influenza}, typically producing
 
 \vspace{10pt}
 
-Influenza viruses constantly evolve~\cite{dos2016influenza}, typically producing small sequence alterations over a time scale of months  that  perturb surface protein structures sufficiently to evade host immunity, and cause the  recurring seasonal flu epidemic. Such antigenic drifts necessitate yearly innoculation of the population with a  reformulated  vaccine.  Failing to predict the dominant strain  dramatically reduces  vaccine effectiveness~\cite{tricco2013comparing}, and despite a serious  impact on global health from the seasonal infection spikes, prediction of the dominant strain remains imperfect.
+Influenza viruses constantly evolve~\cite{dos2016influenza},  producing small sequence alterations over a time scale of months  that  perturb surface protein structures sufficiently to evade the prevailing host immunity, and cause the  recurring seasonal flu epidemic, claiming a quarter to half a million lives annually~\cite{huddleston2020integrating}. Such antigenic drifts necessitate yearly innoculation of the population with a  reformulated  vaccine.  Designing the optimal flu shot requires predicting the dominant  strain(s)  in the upcoming season, and deviations between the predicted and the circulating strain(s) that emerge dramatically reduces  vaccine effectiveness~\cite{tricco2013comparing}. Unfortunately,  despite the seasonal infection spikes being a serious  global health issue, and recent advances in forecasting tools~\cite{neher2014predicting,huddleston2020integrating}, prediction of the dominant strain(s) remains imperfect. 
 
-
-While the seasonal epidemic is of great concern, novel \infl strains spilling over into humans from animal reservoirs, often aided by  recombination of genes from past human  strains, pose the even graver threat of a  pandemic.
+While the seasonal flu epidemic is of great concern, novel \infl strains spilling over into humans from animal reservoirs, often aided by  recombination of genes from past human  strains, pose the even graver threat of a  pandemic.
 In the aftermath of the devastating COVID-19 pandemic, a looming question is whether we can prepare for, preempt and mitigate such events in the future.  \infl,  partly on account of its segmented genome and its wide prevalence is common animal hosts, has historically demonstrated its ability to easily incorporate genes from multiple strains and emerge as novel human pathogens,  thus posing a high risk of triggering the next  global pandemic.
 
-One conceivable approach to mitigating such risk is to preemptively identify specific strains in animal hosts that potentially have, or can easily acquire, the ability to  jump to humans, and achieve human-to-human (HH) transmission capability. Despite global biosurveillance efforts to  collect wild specimens from diverse hosts and geo-locations, our current ability to objectively, reliably and scalably  evaluate the risk posed to  humans by  individual strains  is limited.
+One conceivable approach to mitigating such risk is to preemptively identify specific strains in animal hosts that do not yet circulate in humans, but  potentially have, or can easily acquire, the ability to  jump to humans, and quickly achieve human-to-human (HH) transmission capability. Despite global surveillance efforts to  collecting wild specimens from diverse hosts and geo-locations,  current ability to objectively, reliably and scalably  evaluate the risk posed to  humans by  individual strains  is limited.
+
+CDC's current, somewhat subjective, solution to this problem is the Influenza Risk Assessment Tool (IRAT), which  uses a combination of ten weighted risk elements, aiming to factor in the   1) properties of the virus, 2) attributes of the population, and 3) ecology and epidemiological characteristics of the virus~\cite{Influenz24:online} that are expert-selected. Evaluating these factors involve several experimental assays for each strain, possibly taking  weeks to return the final IRAT  score for a single strain. Thus, we have a scalability problem: while  the current global biosurveillance efforts are collecting tens of thousands of sequences every year, most of these sequences will never be analyzed in time. IRAT assessment is simply not fast enough to leverage the full capacity of current surveillance output, and thus has low odds of  preempting a pandemic.
+
 
 In this study, we introduce a new machine learning algorithm to automatically parse out emergent evolutionary constraints operating on viral sequences in the wild, allowing us to predict the likelihood of specific future  mutations, and  the likelihood of specific  strains emerging through natural evolutionary processes.
 
