--- a/tex/main.tex
+++ b/tex/main.tex
@@ -34,29 +34,31 @@ Influenza viruses constantly evolve~\cite{dos2016influenza}, typically producing
 }
 
 \vspace{10pt}
-
-Influenza viruses constantly evolve~\cite{dos2016influenza},  producing small sequence alterations over a time scale of months  that  perturb surface protein structures sufficiently to evade the prevailing host immunity, and cause the  recurring seasonal flu epidemic, claiming a quarter to half a million lives annually~\cite{huddleston2020integrating}. Such antigenic drifts necessitate yearly innoculation of the population with a  reformulated  vaccine.  Designing the optimal flu shot requires predicting the dominant  strain(s)  in the upcoming season, and deviations between the predicted and the circulating strain(s) that emerge dramatically reduces  vaccine effectiveness~\cite{tricco2013comparing}. Unfortunately,  despite the seasonal infection spikes being a serious  global health issue, and recent advances in forecasting tools~\cite{neher2014predicting,huddleston2020integrating}, prediction of the dominant strain(s) remains imperfect. 
-
-While the seasonal flu epidemic is of great concern, novel \infl strains spilling over into humans from animal reservoirs, often aided by  recombination of genes from past human  strains, pose the even graver threat of a  pandemic.
-In the aftermath of the devastating COVID-19 pandemic, a looming question is whether we can prepare for, preempt and mitigate such events in the future.  \infl,  partly on account of its segmented genome and its wide prevalence is common animal hosts, has historically demonstrated its ability to easily incorporate genes from multiple strains and emerge as novel human pathogens,  thus posing a high risk of triggering the next  global pandemic.
-
-One conceivable approach to mitigating such risk is to preemptively identify specific strains in animal hosts that do not yet circulate in humans, but  potentially have, or can easily acquire, the ability to  jump to humans, and quickly achieve human-to-human (HH) transmission capability. Despite global surveillance efforts to  collecting wild specimens from diverse hosts and geo-locations,  current ability to objectively, reliably and scalably  evaluate the risk posed to  humans by  individual strains  is limited.
-
-CDC's current, somewhat subjective, solution to this problem is the Influenza Risk Assessment Tool (IRAT), which  uses a combination of ten weighted risk elements, aiming to factor in the   1) properties of the virus, 2) attributes of the population, and 3) ecology and epidemiological characteristics of the virus~\cite{Influenz24:online} that are expert-selected. Evaluating these factors involve several experimental assays for each strain, possibly taking  weeks to return the final IRAT  score for a single strain. Thus, we have a scalability problem: while  the current global biosurveillance efforts are collecting tens of thousands of sequences every year, most of these sequences will never be analyzed in time. IRAT assessment is simply not fast enough to leverage the full capacity of current surveillance output, and thus has low odds of  preempting a pandemic.
-
-
-In this study, we introduce a new machine learning algorithm to automatically parse out emergent evolutionary constraints operating on viral sequences in the wild, allowing us to predict the likelihood of specific future  mutations, and  the likelihood of specific  strains emerging through natural evolutionary processes.
-
-Using this approach, we first demonstrate that our forecasts outperform WHO recommended flu vaccine compositions almost consistently over the past two decades, for both H1N1 and H3N2 subtypes, individually in the northern and the southern hemispheres. Such predictive capability validates our framework, outperforming recent proposals using computational or experimental frameworks [REF], and thus can potentially non-trivially improve the effectiveness of the flu shot.
-
-However, our key outcome in this study is our ability to replicate the Center for Disease Control's (CDC) Influence Risk Assessment (IRAT) score for the pandemic potential of  \infl  viruses isolated from animal hosts, specifically ones that do not yet circulate in humans. While the IRAT evaluation for individual strains involves multiple experimental assays that typically take weeks to perform, our approach produces a highly correlated risk assessment in seconds. This dramatic reduction in time and cost potentially allows us to fully exploit current biosurvellinace capacity, scalably analyzing risk from  the tens of thousands of strains collected every year, and hence potentially laying the foundation for  meaningful preemptive pandemic mitigation strategies. 
-
-
 \section*{Introduction}
+
+Influenza viruses constantly evolve~\cite{dos2016influenza},  producing small sequence alterations over a time scale of months  that  perturb surface protein structures sufficiently to evade the prevailing host immunity, and cause the  recurring seasonal flu epidemic. Such  infection peaks claim a quarter to half a million lives annually~\cite{huddleston2020integrating},  necessitating yearly innoculation of the population with a  reformulated  vaccine.  Designing the optimal flu shot requires predicting the dominant  strain(s)  in the upcoming season, and deviations between the predicted and the circulating strain(s) dramatically reduce  vaccine effectiveness~\cite{tricco2013comparing}. Unfortunately,  despite  recent advances in forecasting tools~\cite{neher2014predicting,huddleston2020integrating}, prediction of the dominant strain(s) remains imperfect. 
+
+While the seasonal flu epidemic is a crucial health concern, novel \infl strains spilling over into humans from animal reservoirs pose the even graver threat of a global pandemic. With the memory of sudden emergence of   COVID-19 fresh in our minds, a looimng question  is whether we can prepare for, preempt and mitigate such events in the future.  \infl,  partly on account of its segmented genome and its wide prevalence is common animal hosts, has historically demonstrated its ability to easily incorporate genes from multiple strains and emerge as novel human pathogens,  thus posing a high risk of triggering the next  pandemic.
+
+To mitigate such risk we must preemptively identify specific strains in animal hosts that do not yet circulate in humans, but   have the potential to  jump to humans, and quickly achieve human-to-human (HH) transmission capability. Despite global surveillance efforts to  collecting wild specimens from diverse hosts and geo-locations,  current ability to objectively, reliably and scalably  evaluate the risk posed to  humans by  individual strains  is limited.
+
+CDC's current, somewhat subjective, solution to this problem is the Influenza Risk Assessment Tool (IRAT), which  uses a combination of ten weighted risk elements, aiming to factor in the   1) properties of the virus, 2) attributes of the population, and 3) ecology and epidemiological characteristics of the virus~\cite{Influenz24:online} that are largely  expert-selected. The IRAT score assigns  a grade between 1-10 for emergence risk and public health impact to Influenza A viruses not currently circulating among humans. However, evaluating the IRAT risk elemenst  involve multiple experimental assays for each strain, possibly taking  weeks to return the final   score for a single strain. Thus, we have a scalability problem: while  the current global biosurveillance efforts are collecting tens of thousands of sequences every year, most of these sequences will never be analyzed in time. IRAT assessment protocols are  not fast enough to leverage the full capacity of current surveillance output, and thus have low odds of  preempting a pandemic.
+
+
+In this study, we introduce a new machine learning algorithm to automatically parse out emergent evolutionary constraints operating on viral sequences in the wild, ultimately culminating in the ability to rapidly rank-order strains isolated in animal hosts according to their pandemic potential. This is realized by our learning framework via predicting the likelihood of specific future  mutations, and  consequently, the numerical likelihood of specific  strains emerging through natural evolutionary processes shaped by diverse, hard-to-model selection pressures.
+To summarize our key results, we first demonstrate that our forecasts outperform WHO recommended flu vaccine compositions almost consistently over the past two decades, for both H1N1 and H3N2 subtypes, individually in the northern and the southern hemispheres. Such predictive capability validates our framework, outperforming recent proposals using computational or experimental frameworks~\cite{huddleston2020integrating,neher2014predicting}, and thus can potentially non-trivially improve the effectiveness of the flu shot.
+
+However, our key outcome  is  replicating the IRAT score for  \infl  viruses, specifically ones that do not yet circulate in humans, in seconds as opposed to weeks. This dramatic reduction in time and cost potentially opens the door to fully exploiting the  current biosurvellinace capacity, scalably analyzing risk from  the tens of thousands of strains collected every year, and hence moving towards   meaningful preemptive pandemic mitigation strategies. 
+
+{\color{Red1}
+\section*{Discussion}
 In the aftermath of the COVID-19 pandemic that caused one of the most devastating disasters of the past century, a looming question is whether we can prepare for, preempt and mitigate such events in the future. Evolving viruses, whether currently circulating in the human population, or in animal reservoirs that might spillover and attain human-to-human transmission capability, pose an ever-present epidemic risk.  Current surveillance paradigms, while crucial for mapping disease ecosystems, are limited in their ability to address this challenge. Habitat encroachment, climate change, and other ecological factors~\cite{rulli2017nexus,chua2002anthropogenic,childs2004zoonotic} unquestionably drive up the odds of zoonotic spill-overs. Nevertheless, current efforts at tracking these effects have not improved our ability to quantify future risk of emergence~\cite{fair2019viral}. Tracking viral diversity in animal hosts, while important, often does not transparently map to emergence risk.  This is particularly true for \infl, which partly on account of its segmented genome, can easily incorporate genes from multiple strains and emerge as novel human pathogens, and thus harbor a high pandemic potential. While large antigenic shifts in \infl are relatively rare, even the smaller seasonal sequence alterations in cause sufficient variation in the surface proteins to evade existing immunity, and require yearly reformulation of the flu vaccine.
 
 However, for the  vaccine to be effective, we need to  predict the dominant circulating strain of the upcoming season with sufficient accuracy.
-Currently, the composition of the flu shot is decided at least six months in advance of the seasonal infection peak, and targets three to four  historical strains as recommended by the CDC/WHO, who identify these specific strains by  sampling the current circulation~\cite{agor2018models}, hoping to match the  dominant strain(s) in the upcoming season. A variety of hard-to-model effects hinder this prediction, which, despite observed cross-reactive effects~\cite{tricco2013comparing}, have had  limited vaccine effectiveness in recent years~\cite{cdceff}. Rank-ordering strains which do not yet circulate in humans according to either their spillover risk or their pandemic potential, has proven to be even more difficult [REF]. CDC's current, somewhat subjective, solution to this problem is the Influenza Risk Assessment Tool (IRAT), which  uses a combination of ten weighted risk elements, including  1) properties of the virus, 2) attributes of the population, and 3) ecology and epidemiological characteristics of the virus~\cite{Influenz24:online} that are expert-selected. Evaluating these factors involve several experimental assay for each strain, taking possibly weeks to return the final IRAT  score for a single strain. Thus, we have a scalability problem: with  the current global biosurveillance efforts  collecting tens of thousands of sequences every year, IRAT assessment is simply not fast enough to  preempt a pandemic. 
+Currently, the composition of the flu shot is decided at least six months in advance of the seasonal infection peak, and targets three to four  historical strains as recommended by the CDC/WHO, who identify these specific strains by  sampling the current circulation~\cite{agor2018models}, hoping to match the  dominant strain(s) in the upcoming season. A variety of hard-to-model effects hinder this prediction, which, despite observed cross-reactive effects~\cite{tricco2013comparing}, have had  limited vaccine effectiveness in recent years~\cite{cdceff}. Rank-ordering strains which do not yet circulate in humans according to either their spillover risk or their pandemic potential, has proven to be even more difficult [REF]. CDC's current, somewhat subjective, solution to this problem is the Influenza Risk Assessment Tool (IRAT), which  uses a combination of ten weighted risk elements, including  1) properties of the virus, 2) attributes of the population, and 3) ecology and epidemiological characteristics of the virus~\cite{Influenz24:online} that are expert-selected. Evaluating these factors involve several experimental assay for each strain, taking possibly weeks to return the final IRAT  score for a single strain. Thus, we have a scalability problem: with  the current global biosurveillance efforts  collecting tens of thousands of sequences every year, IRAT assessment is simply not fast enough to  preempt a pandemic. }
+
+
+\section*{Brief Methods}
 
 A key barrier to making progress in this direction has been the missing ability to estimate the numerical likelihood of specific mutations in the future, and in general  the likelihood of a wild strain spontaneously giving rise to another by random chance. Currently, this likelihood is qualitatively equated to sequence similarity, which is measured by the number of mutations it takes to change one strain to another. However, the odds of one sequence mutating to another is not just a function of how many mutations separate them, but also of how specific mutations incrementally affect fitness. Ignoring the constraints arising from the need to conserve function makes any assessment of the mutation likelihood open to subjective bias. Here, we show that a precise calculation is possible when sequence similarity is evaluated via a new biologically-aware metric, which we call the \textit{q-distance}.
 
